@@ -73,6 +73,10 @@
      [regress/sftp-cmds.sh regress/sftp-glob.sh regress/test-exec.sh]
      comprehensive tests for sftp escaping its interaction with globbing;
      ok dtucker@
+   - djm@cvs.openbsd.org 2007/10/26 05:30:01
+     [regress/sftp-glob.sh regress/test-exec.sh]
+     remove "echo -E" crap that I added in last commit and use printf(1) for
+     cases where we strictly require echo not to reprocess escape characters.
 
 20070927
  - (dtucker) [configure.ac atomicio.c] Fall back to including <sys/poll.h> if
@@ -3344,4 +3348,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4776 2007/10/26 04:54:12 djm Exp $
+$Id: ChangeLog,v 1.4777 2007/10/26 05:35:54 djm Exp $
